--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <title><%= full_title(yield(:title)) %></title>
+
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
+  <%= render 'layouts/shim' %>
+   <script type="text/javascript">
+        $(document).ready(function () {
+            $('.dropdown-toggle').dropdown();
+        });
+   </script>
 </head>
 <body>
+	<%= render 'layouts/header' %>
+	<div class ="container">
+		<%= yield %>
+	</div>
 
-<%= yield %>
 
 </body>
 </html>
