--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,17 @@
    <script type="text/javascript">
         $(document).ready(function () {
             $('.dropdown-toggle').dropdown();
+            $('.carousel').carousel()
         });
    </script>
 </head>
 <body>
 	<%= render 'layouts/header' %>
 	<div class ="container">
-		<%= yield %>
-	</div>
+    <div class ="page_content">
+		  <%= yield %>
+    </div>
+    <%= render 'layouts/footer' %>
 
 
 </body>
