--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,15 @@
 <header>
 	<div class="container">
 		<%= image_tag("banner.png", id: "banner", alt: 'banner') %>
-		<nav class= "navbar">
-			<ul class = "nav">
+
+			<ul class = "nav nav-pills">
 				<li><%= link_to "Home", root_path %></li>
 				<li><%= link_to "Company", '#' %></li>
 				<li class="dropdown">
 				<a href="#"> Translation 
 					<b class="caret"></b>
 				</a>
-					<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+					<ul class="dropdown-menu">
 						<li><%= link_to "Steps", '#' %></li>
 						<li><%= link_to "Price", '#' %></li>
 					</ul>
@@ -19,7 +19,7 @@
 				<a href="#">Interpretation 
 					<b class="caret"></b>
 				</a>
-					<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+					<ul class="dropdown-menu">
 						<li><%= link_to "Steps", '#' %></li>
 						<li><%= link_to "Price", '#' %></li>
 					</ul>
@@ -29,7 +29,7 @@
 				<li><%= link_to "Customer Support", '#' %></li>
 				
 			</ul>
-		</nav>	
+	
 	</div>
 
 </header>
