--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,12 @@
 <footer>
-	<small> Stream 번역통역 </small>
-	<small class = "phone"> 010-5403-6607 </small>
+<!--	<small> Stream 번역통역 </small>
+	<small class = "phone"> 010-5403-6607 </small>-->
+
+<p><small>상호 스트림번역 | 주소 전북남원시향교동280-6, 3 층
+		| 사업자등록번호 030304-22200000 | 통신판매 제2014- 
+		전북남원- 00000호 | 대표: 김진우
+</small></p>
+<p><small>TEL : 010-3254-0509 (070-4104-0509) | FAX : 070-1234-1234
+		 | E-MAIL : streameng@naver.com
+</small></p>
 </footer>
