--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,7 @@
   <%= csrf_meta_tags %>
 
   <%= render 'layouts/shim' %>
-   <script type="text/javascript">
-        $(document).ready(function () {
-            $('.dropdown-toggle').dropdown();
-            $('.carousel').carousel()
-        });
-   </script>
+
 </head>
 <body>
 	<%= render 'layouts/header' %>
@@ -21,8 +16,9 @@
     <div class ="page_content">
 		  <%= yield %>
     </div>
-    <%= render 'layouts/footer' %>
+  </div>
 
 
 </body>
+<%= render 'layouts/footer' %>
 </html>
