--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,18 @@
 <header>
 	<div class="container">
-		<%= image_tag("banner.png", id: "banner", alt: 'banner') %>
+		<%= image_tag("banner.jpg", id: "banner", alt: 'banner') %>
 	</div>
-			<ul class = "nav nav-pills main_menu">
-				<li><%= link_to "Home", root_path %></li>
+			<ul class = "nav-pills nav main_menu">
+				<li id="home_link"><%= link_to "Stream", root_path %></li>
 				<li><%= link_to "Company (회사)", company_path %></li>
 				<li class="dropdown">
 				<a href="#"> Translation (번역)
 					<b class="caret"></b>
 				</a>
 					<ul class="dropdown-menu">
-						<li><%= link_to "절차", transproc_path %></li>
-						<li><%= link_to "가격", transprice_path %></li>
+						<li><%= link_to "Process | 절차", transproc_path %></li>
+						<li><%= link_to "Price | 가격", transprice_path %></li>
+						<li><%= link_to "Order | 주문", transorder_path %></li>
 					</ul>
 				</li>
 
@@ -19,12 +20,14 @@
 				<a href="#">Interpretation (통역) 
 					<b class="caret"></b>
 				</a>
-					<ul class="dropdown-menu">
-						<li><%= link_to "절차", 
+					<ul class="dropdown-menu" style="width:15em;">
+						<li><%= link_to "Process | 절차", 
 							interpretproc_path %>
 						</li>
-						<li><%= link_to "가격",
+						<li><%= link_to "Price | 가격",
 							interpretprice_path %>
+						</li>
+						<li><%= link_to "Order | 주문", interpretorder_path %>
 						</li>
 					</ul>
 				</li>
@@ -32,7 +35,7 @@
 				<li><%= link_to "Apply (통 번역사지원)", 
 					apply_path %>
 				</li>
-				<li><%= link_to "Customer Support (고갟센터)", 
+				<li style="border-right:none"><%= link_to "Customer Support (고객센터)", 
 					support_path %>
 				</li>
 				
