--- a/app/views/trans_pages/transproc.html.erb
+++ b/app/views/trans_pages/transproc.html.erb
@@ -6,9 +6,11 @@
 
 	<div class= "process_right">
 		<ul class = "process_info">
-		<li>양식 다운</li>
-		<li>의뢰할 문서정보 입력(용도, 기간등)</li>
-		<li>의뢰인 연락처 입력</li>
+		<li>대상언어 및 가격 확인</li>
+		<li>견적의뢰 및 조건확인(날짜, 가격) </li>
+		<li>주문</li>
+		<li>선입금(100%)</li>
+		<li>번역물 확인</li>
 		</ul>
 	</div>
 </div>
